feat(chat): 채팅 초기 데이터 및 서비스 로직 수정